--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-clipboard/clipboard": "^1.11.2",
+    "@react-native-community/checkbox": "^0.5.15",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/native": "^6.1.6",
@@ -22,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-communications": "^2.2.1",
     "react-native-gesture-handler": "^2.10.0",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
