--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "frontend",
-    "slug": "frontend",
+    "name": "AutoConnectX",
+    "slug": "autoconnectx",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -29,7 +29,7 @@
     },
     "extra": {
       "eas": {
-        "projectId": "9a5bafe3-4b9e-44ae-894b-45bdf5c97e5f"
+        "projectId": "e73ce95f-9f61-4784-8c73-6bbdd892b9bb"
       }
     },
     "owner": "miguelamoedo"
